src/App.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  padding: 15px;
}

main {
  max-width: 700px;
}

/* HEADER */

header {
  float: left;
  margin: 5px 30px 40px 0;
  color: rgba(17, 16, 16, 0.9);
  font-style: italic;
}

a {
  text-decoration: none;
  color: inherit;
}

a:visited {
  text-decoration: none;
}

.navbar {
  list-style: none;
}

.nav-item:hover {
  background-color: #ADC698;
  color: #ffffff;
  margin-left: 165px;
}


/* INDEX */

.index-body {
  margin: 15px 0;
}

/* ABOUT */
.about-pic {
  margin-bottom: 5px;
}

.about-body {
  margin: 15px 0;
  line-height: 1.2em;
}

.about-body a:hover{
  background-color: black;
  color: #ffffff;
}

/* PROJECTS */
.projects-body {
  margin: 15px 0;
  line-height: 1.2em;
}

.projects-body p {
  margin: 10px 0 15px 0;
}

.projects-body a:hover{
  background-color: black;
  color: #ffffff;
}

/* AUDIO */
.audio-body {
  margin: 15px 0;
}

.audio-body p {
  margin: 10px 0 15px 0;
}

.audio-body a:hover{
  background-color: black;
  color: #ffffff;
}

/* FOOTER */

footer {
  border-top: 1.5px solid;
  padding-top: 10px;
  font-size: 1.03em;
}

.footer-nav {
  list-style: none;
  display: flex;
  justify-content: flex-start;
}

.footer-nav li {
  padding-right: 10px;
}

.icon-links {
  font-size: 1.75em;
}

.footer-text {
  padding-top: 3px;
}

/* For extremely small screen devices (595px and below) */
@media only screen and (max-width: 595px) {

}
 
/* Small screen devices (600px and above) */
@media only screen and (min-width: 600px) {

}
 
/* Medium screen devices (768px and above) */
@media only screen and (max-width: 768px) {

img {
  max-width: 100%;
  height: auto;
}

p {
  font-size: .9em;
}

a {
  font-size: .9em;
}

.icon-links {
  max-width: 40px;
}
}

